use center alignment for all body text

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,7 @@
 <html>
+<style type="text/css">
+  body { text-align: center; }
+</style>
 <body>
 <h1>Merry Christmas!</h1>
 <p>Owen, this is your website! Have fun making it into something special!</p>
