--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,7 @@
   body { text-align: center; }
 </style>
 <body>
-<h1>Merry Christmas!</h1>
-<p>Owen, this is your website! Have fun making it into something special!</p>
+<h1>Hello! I am Awesome!</h1>
+<p>Aren't I <i>soooo</i> GOOD AT CODING?!</p>
 </body>
 </html>
