created cheat sheet

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,11 @@
   body { text-align: center; }
 </style>
 <body>
-<h1>Hello! I am Awesome!</h1>
-<p>Aren't I <i>soooo</i> GOOD AT CODING?!</p>
+<h1>Hello! I am Awesome! Hear's My coding cheat sheet!</h1>
+<h2>"GIT" commands</h2>
+<p>git status: lists basic status of your project</p>
+<p>git diff: shows the changes of the project (comparing the last save from the most recent one)</p>
+<p>git add .: prepares (or "stages") the folder and its contents to be committed</p>
+<p>git add (filename): prepares an individual file to be committed</p>
 </body>
 </html>
