added 'git commit' to the cheat sheet

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,5 +9,6 @@
 <p>git diff: shows the changes of the project (comparing the last save from the most recent one)</p>
 <p>git add .: prepares (or "stages") the folder and its contents to be committed</p>
 <p>git add (filename): prepares an individual file to be committed</p>
+<p>git commit -m "(message)": commits the changes of the file to the repository, and includes a message</p>
 </body>
 </html>
