added git log and git push to cheat sheet

--- a/pages/index.html
+++ b/pages/index.html
@@ -10,5 +10,7 @@
 <p>git add .: prepares (or "stages") the folder and its contents to be committed</p>
 <p>git add (filename): prepares an individual file to be committed</p>
 <p>git commit -m "(message)": commits the changes of the file to the repository, and includes a message</p>
+<p>git log: show all of the commit history</p>
+<p>git push: pushes the commit history from the local repository up to the remote repository</p>
 </body>
 </html>
