--- a/pages/index.html
+++ b/pages/index.html
@@ -11,6 +11,7 @@
 <p>git add (filename): prepares an individual file to be committed</p>
 <p>git commit -m "(message)": commits the changes of the file to the repository, and includes a message</p>
 <p>git log: show all of the commit history</p>
-<p>git push: pushes the commit history from the local repository up to the remote repository</p>
+<p>git push: pushes the commit history from the local repository up to the github repository</p>
+<p>git pull: pulls the commit history from the github repository down to the web server's repository</p>
 </body>
 </html>
