added a section for linux commands, with a  TODO note

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,5 +13,7 @@
 <p>git log: show all of the commit history</p>
 <p>git push: pushes the commit history from the local repository up to the github repository</p>
 <p>git pull: pulls the commit history from the github repository down to the web server's repository</p>
+<h2>"LINUX" commands</h2>
+<p>TODO: add the linux commands</p>
 </body>
 </html>
