Added linux commands. Got rid of TODO.

--- a/pages/index.html
+++ b/pages/index.html
@@ -14,6 +14,9 @@
 <p>git push: pushes the commit history from the local repository up to the github repository</p>
 <p>git pull: pulls the commit history from the github repository down to the web server's repository</p>
 <h2>"LINUX" commands</h2>
-<p>TODO: add the linux commands</p>
+<p>ls: Lists the current directory(simple)</p> 
+<p>ll: Lists all of the files/folers. (simplified vertion of ls)</p>
+</p>cd:Changes the curent directory to the folder you specify</p>
+<p>pwd: Prints (shows) the working directory folder. </p>
 </body>
 </html>
