Fixed HTML Error
3/25/2015 8:24 PM

--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
 <h2>"LINUX" commands</h2>
 <p>ls: Lists the current directory(simple)</p> 
 <p>ll: Lists all of the files/folers. (simplified vertion of ls)</p>
-</p>cd:Changes the curent directory to the folder you specify</p>
+<p>cd:Changes the curent directory to the folder you specify</p>
 <p>pwd: Prints (shows) the working directory folder. </p>
 </body>
 </html>
