--- a/pages/index.html
+++ b/pages/index.html
@@ -4,20 +4,34 @@
 </style>
 <body>
 <h1>Hello! I am Awesome! Hear's My coding cheat sheet!</h1>
-<h2>"GIT" commands</h2>
-<p>git status: lists basic status of your project</p>
-<p>git clone: copies your entire repository to your local  machine</p>
-<p>git diff: shows the changes of the project (comparing the last save from the most recent one)</p>
-<p>git add .: prepares (or "stages") the folder and its contents to be committed</p>
-<p>git add (filename): prepares an individual file to be committed</p>
-<p>git commit -m "(message)": commits the changes of the file to the repository, and includes a message</p>
-<p>git log: show all of the commit history</p>
-<p>git push origin master: pushes the commit history from the local repository up to the github repository</p>
-<p>git pull: pulls the commit history from the github repository down to the web server's repository</p>
-<h2>"LINUX" commands</h2>
+<h2>Everyone Loves a Owen! THE OWEN!</h2>
+<h3>"GIT" Commands</h3>
+<p>git status: Lists basic status of your project</p>
+<p>git clone: Copies your entire repository to your local  machine</p>
+<p>git diff: Shows the changes of the project (comparing the last save from the most recent one)</p>
+<p>git add .: Prepares (or "stages") the folder and its contents to be committed</p>
+<p>git add (filename): Prepares an individual file to be committed</p>
+<p>git commit -m "(message)": Commits the changes of the file to the repository, and includes a message</p>
+<p>git log: Shows all of the commit history</p>
+<p>git push origin master: Pushes the commit history from the local repository up to the github repository</p>
+<p>git pull: Pulls the commit history from the github repository down to the web server's repository</p>
+<h4>"LINUX" commands</h4>
 <p>ls: Lists the current directory(simple)</p> 
 <p>ll: Lists all of the files/folers. (simplified vertion of ls)</p>
 <p>cd:Changes the curent directory to the folder you specify</p>
-<p>pwd: Prints (shows) the working directory folder. </p>
+<p>pwd: Prints (shows) The working directory folder. </p>
+<p>rmdir: (the directory name): Removes the directory that you specify from the system.</p>
+<p>less (the filename): Opens the content of the file that you specify.</p>
+<p>man (the cammand): Shows the uses, how to use it, some sort of and sort of not usefull information</p>
+<p>cd .. : Changes your working directory to the folder or directory that you were previosly in.</p>
+<p>cd ~: Changes your working directory to the home or main directory</p>
+<p>exit: Logs off any connected servers or computers, and on most termanals and prompts, closes the termanal/prompt. This command usaly works on non-Linux/Ubuntu too.</p> 
+<p>rm (the filename): Removes the file that you specify.
+<h5> Required programs to interact, modify, and work with this Web padge:</h5>
+<p> 1a. Putty (windows)</p>
+<p> 1b. Termanal (Mac OS)<p>
+<p> 2. subline text </p>
+<p> 3. Cygwin (Windows)</p>
+<p> 4. Git Bash</p>
 </body>
 </html>
