Added mkdir command

--- a/pages/index.html
+++ b/pages/index.html
@@ -21,6 +21,7 @@
 <p>cd:Changes the curent directory to the folder you specify</p>
 <p>pwd: Prints (shows) The working directory folder. </p>
 <p>rmdir: (the directory name): Removes the directory that you specify from the system.</p>
+<p>mkdir: (the new directory name) creates a new directory (folder) </p>
 <p>less (the filename): Opens the content of the file that you specify.</p>
 <p>man (the cammand): Shows the uses, how to use it, some sort of and sort of not usefull information</p>
 <p>cd .. : Changes your working directory to the folder or directory that you were previosly in.</p>
