Added formating such as bold and italic and fixed minor formatting errors

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,18 +3,18 @@
   body { text-align: center; }
 </style>
 <body>
-<h1>Hello! I am Awesome! Hear's My coding cheat sheet!</h1>
-<h2>Everyone Loves a Owen! THE OWEN!</h2>
+<h1>Hello! I am <b>Awesome!</b> Hear is My coding cheat sheet!</h1>
+<h2>Everyone Loves a <i>The</i>Owen! THE OWEN!</h2>
 <h3>"GIT" Commands</h3>
 <p>git status: Lists basic status of your project</p>
-<p>git clone: Copies your entire repository to your local  machine</p>
-<p>git diff: Shows the changes of the project (comparing the last save from the most recent one)</p>
-<p>git add .: Prepares (or "stages") the folder and its contents to be committed</p>
-<p>git add (filename): Prepares an individual file to be committed</p>
-<p>git commit -m "(message)": Commits the changes of the file to the repository, and includes a message</p>
-<p>git log: Shows all of the commit history</p>
-<p>git push origin master: Pushes the commit history from the local repository up to the github repository</p>
-<p>git pull: Pulls the commit history from the github repository down to the web server's repository</p>
+<p>git <b>clone</b>: Copies your entire repository to your local  machine</p>
+<p>git <b>diff</b>: Shows the changes of the project (comparing the last save from the most recent one)</p>
+<p>git <b>add</b>: Prepares (or "stages") the folder and its contents to be committed</p>
+<p>git <b>add (filename)</b>: Prepares an individual file to be committed</p>
+<p>git <b>commit -m</b> "(message)": Commits the changes of the file to the repository, and includes a message</p>
+<p>git <b>log</b>: Shows all of the commit history</p>
+<p>git <b>push origin master</b>: Pushes the commit history from the local repository up to the github repository</p>
+<p>git <b>pull</b>: Pulls the commit history from the github repository down to the web server's repository</p>
 <h4>"LINUX" commands</h4>
 <p>ls: Lists the current directory(simple)</p> 
 <p>ll: Lists all of the files/folers. (simplified vertion of ls)</p>
