cut the cheat sheet in to pages and added the links

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,38 +1,19 @@
 <html>
-<style type="text/css">
-  body { text-align: center; }
-</style>
-<body>
-<h1>Hello! I am <b>Awesome!</b> Hear is My coding cheat sheet!</h1>
-<h2>Everyone Loves a <i>The</i>Owen! THE OWEN!</h2>
-<h3>"GIT" Commands</h3>
-<p>git status: Lists basic status of your project</p>
-<p>git <b>clone</b>: Copies your entire repository to your local  machine</p>
-<p>git <b>diff</b>: Shows the changes of the project (comparing the last save from the most recent one)</p>
-<p>git <b>add</b>: Prepares (or "stages") the folder and its contents to be committed</p>
-<p>git <b>add (filename)</b>: Prepares an individual file to be committed</p>
-<p>git <b>commit -m</b> "(message)": Commits the changes of the file to the repository, and includes a message</p>
-<p>git <b>log</b>: Shows all of the commit history</p>
-<p>git <b>push origin master</b>: Pushes the commit history from the local repository up to the github repository</p>
-<p>git <b>pull</b>: Pulls the commit history from the github repository down to the web server's repository</p>
-<h4>"LINUX" commands</h4>
-<p>ls: Lists the current directory(simple)</p> 
-<p>ll: Lists all of the files/folers. (simplified vertion of ls)</p>
-<p>cd:Changes the curent directory to the folder you specify</p>
-<p>pwd: Prints (shows) The working directory folder. </p>
-<p>rmdir: (the directory name): Removes the directory that you specify from the system.</p>
-<p>mkdir: (the new directory name) creates a new directory (folder) </p>
-<p>less (the filename): Opens the content of the file that you specify.</p>
-<p>man (the cammand): Shows the uses, how to use it, some sort of and sort of not usefull information</p>
-<p>cd .. : Changes your working directory to the folder or directory that you were previosly in.</p>
-<p>cd ~: Changes your working directory to the home or main directory</p>
-<p>exit: Logs off any connected servers or computers, and on most termanals and prompts, closes the termanal/prompt. This command usaly works on non-Linux/Ubuntu too.</p> 
-<p>rm (the filename): Removes the file that you specify.
-<h5> Required programs to interact, modify, and work with this Web padge:</h5>
-<p> 1a. Putty (windows)</p>
-<p> 1b. Termanal (Mac OS)<p>
-<p> 2. subline text </p>
-<p> 3. Cygwin (Windows)</p>
-<p> 4. Git Bash</p>
-</body>
+	<head>
+		<style type="text/css">
+		  body { text-align: center; }
+		</style>
+	</head>
+	<body>
+		<h1>Hello! I am <b>Awesome!</b> Hear is My coding cheat sheet!</h1>
+		<h2>Everyone Loves a <i>The</i>Owen! THE OWEN!</h2>
+		<p><a href="git-cheat-sheet.html">Git Cheat Sheet</a></p>
+		<p><a href="linux-cheat-sheet.html">Linux Cheat Sheet</a></p>
+		<h5> Required programs to interact, modify, and work with this Web padge:</h5>
+		<p> 1a. Putty (windows)</p>
+		<p> 1b. Termanal (Mac OS)<p>
+		<p> 2. subline text </p>
+		<p> 3. Cygwin (Windows)</p>
+		<p> 4. Git Bash</p>
+	</body>
 </html>
