added html cheat sheet and it's link

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,6 +9,7 @@
 		<h2>Everyone Loves a <i>The</i>Owen! THE OWEN!</h2>
 		<p><a href="git-cheat-sheet.html">Git Cheat Sheet</a></p>
 		<p><a href="linux-cheat-sheet.html">Linux Cheat Sheet</a></p>
+		<p><a href="html-cheat-sheet.html">HTML Cheet Sheet</a></p>
 		<h5> Required programs to interact, modify, and work with this Web padge:</h5>
 		<p> 1a. Putty (windows)</p>
 		<p> 1b. Termanal (Mac OS)<p>
