(finally) added html stuff like entities

--- a/pages/html-cheat-sheet.html
+++ b/pages/html-cheat-sheet.html
@@ -6,13 +6,18 @@
 	</head>
 	<body>
 		<h1>html Cheat Sheet</h1>
-		<p>html: starts the html document</p>
-		<p>body: starts the main body of the document</p>
-		<p>head: a space for various document configuration stuff</p>
-		<p>p: gives you a line for various typing</p>
-		<p>h#: gives you a heading</p>
-		<p>b: makes enclosed text bold</p>
-		<p>i: makes the enclosed text italicized</p>
+		<p>&lt;html&gt;: starts the html document</p>
+		<p>&lt;body&gt;: starts the main body of the document</p>
+		<p>&lt;head&gt;: a space for various document configuration stuff</p>
+		<p>&lt;p&gt;: gives you a line for various typing</p>
+		<p>&lt;h#&gt;: gives you a heading</p>
+		<p>&lt;b&gt;: makes enclosed text bold</p>
+		<p>&lt;i&gt;: makes the enclosed text italicized</p>
 		<p>NOTE: to close tags, add a / before the tag name (eg: /html)</p>
+		<h2>HTML Entities:</h2>
+		<p>Entities are special codes made to represent charicters not normally supported in html.
+		 An entity is an ampersand followed by a semicolon, with a code in between.</p>
+		<img src="pics/html-entities.png">
+
 	</body>
 	</html>
