added a section on images and attrabutes, and added (fake) spider repelent. Also ate rat brains:).

--- a/pages/html-cheat-sheet.html
+++ b/pages/html-cheat-sheet.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>html Cheat Sheet</h1>
-		<p>&lt;html&gt;: starts the html document</p>
+		<p>&lt;html&gt;: starts the HTML document</p>
 		<p>&lt;body&gt;: starts the main body of the document</p>
 		<p>&lt;head&gt;: a space for various document configuration stuff</p>
 		<p>&lt;p&gt;: gives you a line for various typing</p>
@@ -15,9 +15,15 @@
 		<p>&lt;i&gt;: makes the enclosed text italicized</p>
 		<p>NOTE: to close tags, add a / before the tag name (eg: /html)</p>
 		<h2>HTML Entities:</h2>
-		<p>Entities are special codes made to represent charicters not normally supported in html.
+		<p>Entities are special codes made to represent characters not normally supported in HTML.
 		 An entity is an ampersand followed by a semicolon, with a code in between.</p>
 		<img src="pics/html-entities.png">
-
+		<p></p>
+		<p></p>
+		<p>To put an image, such as the one above, you must use the tag &lt;img src="filename.extension"&gt;</p>
+		<p>NOTE: you MUST have the image in the directory of the page, or a subfolder in that directory. otherwise, the image WILL NOT LOAD!!!!</p>
+		<p></p>
+		<h3>Some attribute stuff:</h3>
+		<p>An attribute is more than just a tag. Attributes go in tags to make them do stuff, or be stuff, such as a image or a hyperlink.</p>
 	</body>
 	</html>
