--- a/pages/index.html
+++ b/pages/index.html
@@ -16,5 +16,10 @@
 		<p> 2. subline text </p>
 		<p> 3. Cygwin (Windows)</p>
 		<p> 4. Git Bash</p>
+		<p></p>
+		<p></p>
+		<p></p>
+		<img src="pics/the_logo.png">
+		<p>&copy;2016 THE Enterprises. All rights reserved.</p>
 	</body>
 </html>
