made a more formal greeting to the website.

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,8 +5,8 @@
 		</style>
 	</head>
 	<body>
-		<h1>Hello! I am <b>Awesome!</b> Here is My coding website!</h1>
-		<h2>Information: Everyone Loves a <i>The</i>Owen! THE OWEN!</h2>
+		<h1>This is TheOwen's coding website powered By THE Enterprises</h1>
+		<h2>Pages:</h2>
 		<p><a href="git-cheat-sheet.html">Git Cheat Sheet</a></p>
 		<p><a href="linux-cheat-sheet.html">Linux Cheat Sheet</a></p>
 		<p><a href="html-cheat-sheet.html">HTML Cheet Sheet</a></p>
