Capitalized stuff to be capitalized, moved required program list to its own page, and added a ''<Home'' link to every page exept index.html. ate MORE rat brains, this time with CARMEL syrup. yum yum yum.

--- a/pages/git-cheat-sheet.html
+++ b/pages/git-cheat-sheet.html
@@ -15,5 +15,6 @@
 		<p>git <b>log</b>: Shows all of the commit history</p>
 		<p>git <b>push origin master</b>: Pushes the commit history from the local repository up to the github repository</p>
 		<p>git <b>pull</b>: Pulls the commit history from the github repository down to the web server's repository</p>
+		<p><a href="index.html">&lt;Home</a></p>
 	</body>
 </html>
