--- a/pages/html-cheat-sheet.html
+++ b/pages/html-cheat-sheet.html
@@ -5,7 +5,7 @@
 		</style>
 	</head>
 	<body>
-		<h1>html Cheat Sheet</h1>
+		<h1>HTML Cheat Sheet</h1>
 		<p>&lt;html&gt;: starts the HTML document</p>
 		<p>&lt;body&gt;: starts the main body of the document</p>
 		<p>&lt;head&gt;: a space for various document configuration stuff</p>
@@ -25,5 +25,6 @@
 		<p></p>
 		<h3>Some attribute stuff:</h3>
 		<p>An attribute is more than just a tag. Attributes go in tags to make them do stuff, or be stuff, such as a image or a hyperlink.</p>
+		<p><a href="index.html">&lt;Home</a></p>
 	</body>
 	</html>
