--- a/pages/index.html
+++ b/pages/index.html
@@ -10,12 +10,7 @@
 		<p><a href="git-cheat-sheet.html">Git Cheat Sheet</a></p>
 		<p><a href="linux-cheat-sheet.html">Linux Cheat Sheet</a></p>
 		<p><a href="html-cheat-sheet.html">HTML Cheet Sheet</a></p>
-		<h5> Required programs to interact, modify, and work with this Web padge:</h5>
-		<p> 1a. Putty (windows)</p>
-		<p> 1b. Termanal (Mac OS)<p>
-		<p> 2. subline text </p>
-		<p> 3. Cygwin (Windows)</p>
-		<p> 4. Git Bash</p>
+		<p><a href="req-programs.html">Reqired Programs (for this website)</a></p>
 		<p></p>
 		<p></p>
 		<p></p>
