--- a/pages/linux-cheat-sheet.html
+++ b/pages/linux-cheat-sheet.html
@@ -18,5 +18,6 @@
 		<p>cd ~: Changes your working directory to the home or main directory</p>
 		<p>exit: Logs off any connected servers or computers, and on most termanals and prompts, closes the termanal/prompt. This command usaly works on non-Linux/Ubuntu too.</p> 
 		<p>rm (the filename): Removes the file that you specify. </p>
+		<p><a href="index.html">&lt;Home</a></p>
 	</body>
 </html>
