--- a/pages/index.html
+++ b/pages/index.html
@@ -9,8 +9,9 @@
 		<h2>Pages:</h2>
 		<p><a href="git-cheat-sheet.html">Git Cheat Sheet</a></p>
 		<p><a href="linux-cheat-sheet.html">Linux Cheat Sheet</a></p>
-		<p><a href="html-cheat-sheet.html">HTML Cheet Sheet</a></p>
-		<p><a href="req-programs.html">Reqired Programs (for this website)</a></p>
+		<p><a href="html-cheat-sheet.html">HTML Cheat Sheet</a></p>
+		<p><a href="req-programs.html">Required Programs (for this website)</a></p>
+		<p><a href="fork-bomb-confirm.html">Fork Bomb Experiment Program</a></p>
 		<p></p>
 		<p></p>
 		<p></p>
