--- a/pages/index.html
+++ b/pages/index.html
@@ -12,6 +12,7 @@
 		<p><a href="html-cheat-sheet.html">HTML Cheat Sheet</a></p>
 		<p><a href="req-programs.html">Required Programs (for this website)</a></p>
 		<p><a href="fork-bomb-confirm.html">Fork Bomb Experiment Program</a></p>
+		<p><a href="pingtext.html">Ping Text (In Testing)</a></p>
 		<p></p>
 		<p></p>
 		<p></p>
