Added a page for cheat sheets and moved the links from index.html to that page.

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,12 +7,11 @@
 	<body>
 		<h1>This is TheOwen's coding website powered By THE Enterprises</h1>
 		<h2>Pages:</h2>
-		<p><a href="git-cheat-sheet.html">Git Cheat Sheet</a></p>
-		<p><a href="linux-cheat-sheet.html">Linux Cheat Sheet</a></p>
-		<p><a href="html-cheat-sheet.html">HTML Cheat Sheet</a></p>
+
 		<p><a href="req-programs.html">Required Programs (for this website)</a></p>
 		<p><a href="fork-bomb-confirm.html">Fork Bomb Experiment Program</a></p>
 		<p><a href="pingtext.html">Ping Text (In Testing)</a></p>
+		<p><a href="cheat-sheets.html">Code Cheat Sheets</a></p>
 		<p></p>
 		<p></p>
 		<p></p>
