Fixed a name bug in Pingtext.

--- a/pages/pingtext.html
+++ b/pages/pingtext.html
@@ -2,7 +2,7 @@
 "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Union Chat for JavaScript (OrbiterMicro)</title>
+<title>Pingtext for JavaScript</title>
 
 <!--CSS-->
 <!--Adds scrolling to the incoming chat pane.-->
