--- a/pages/index.html
+++ b/pages/index.html
@@ -12,6 +12,7 @@
 		<p><a href="fork-bomb-confirm.html">Fork Bomb Experiment Program</a></p>
 		<p><a href="pingtext.html">Ping Text (In Testing)</a></p>
 		<p><a href="cheat-sheets.html">Code Cheat Sheets</a></p>
+		<p><a href="circle-game.html">The Circle Game</a></p>
 		<p></p>
 		<p></p>
 		<p></p>
