Fixed the circle game html file so it correctly communicates with it's own files. Might have to do this again.

--- a/pages/circle-game.html
+++ b/pages/circle-game.html
@@ -1,7 +1,7 @@
 
 <!-- saved from url=(0030)http://circle-game.sysach.com/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<script async="" src="./circle-game.sysach.com_files/analytics.js"></script><script src="./circle-game.sysach.com_files/jquery-latest.min.js"></script><script type="text/javascript">try {
+<script async="" src="./circle-game_files/analytics.js"></script><script src="./circle-game_files/jquery-latest.min.js"></script><script type="text/javascript">try {
 window.AG_onLoad = function(func) { if (window.addEventListener) { window.addEventListener('DOMContentLoaded', func); } };
 window.AG_removeElementById = function(id) { var element = document.getElementById(id); if (element && element.parentNode) { element.parentNode.removeChild(element); }};
 window.AG_removeElementBySelector = function(selector) { if (!document.querySelectorAll) { return; } var nodes = document.querySelectorAll(selector); if (nodes) { for (var i = 0; i < nodes.length; i++) { if (nodes[i] && nodes[i].parentNode) { nodes[i].parentNode.removeChild(nodes[i]); } } } };
