Added Landergame and it's link.

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,6 +13,7 @@
 		<p><a href="pingtext.html">Ping Text (In Testing)</a></p>
 		<p><a href="cheat-sheets.html">Code Cheat Sheets</a></p>
 		<p><a href="circle-game.html">The Circle Game</a></p>
+		<p><a href="Landergame.html">Landergame</a></p>
 		<p></p>
 		<p></p>
 		<p></p>
