fixed chain recaction so that it does not start on level two

--- a/pages/chain-reaction.html
+++ b/pages/chain-reaction.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0052)file:///C:/Users/the-t/Desktop/Chain%20Reaction.html -->
+<!-- saved from url=(0038)http://yvoschaap.com/chainrxnadvanced/ -->
 <html lang="en" class="wf-proximanova-i4-active wf-proximanova-n4-active wf-proximanova-n7-active wf-active" slick-uniqueid="3"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <title>Chain Reaction - Advanced - The Game</title>
@@ -23,7 +23,7 @@ var AG_removeParent = function(el, fn) { while (el && el.parentNode) { if (fn(el
 <!--[if lt IE 9]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
 <script type="text/javascript" src="./Chain Reaction_files/chainrxn-2.0.js"></script>
 <script src="./Chain Reaction_files/ene4zze.js"></script>
-<style type="text/css">.tk-proxima-nova{font-family:"proxima-nova",sans-serif;}</style><link rel="stylesheet" href="./Chain Reaction_files/l" media="all"><style type="text/css">.tk-proxima-nova{font-family:"proxima-nova",sans-serif;}</style><link rel="stylesheet" href="./Chain Reaction_files/l(1)" media="all"><script>try{Typekit.load();}catch(e){}</script>
+<style type="text/css">.tk-proxima-nova{font-family:"proxima-nova",sans-serif;}</style><link rel="stylesheet" href="./Chain Reaction_files/l" media="all"><script>try{Typekit.load();}catch(e){}</script>
 <script>
 if(Browser.isMobile){
 	document.addEvent('touchmove', function(event){
@@ -38,16 +38,16 @@ if(Browser.isMobile){
   <h1>Chain Reaction</h1>
   <h2>Advanced</h2>
 	<div id="container">
-		<canvas id="ballField" height="600" width="800" style="background-color: rgb(82, 82, 82);"></canvas>
-		<div id="ballsExpanded">1 balls expanded</div>
-    <div id="totalScore">100 total points</div>
-    <div id="levelScore">100 level points</div>
-    <div id="levelNumber">Level 1</div>
+		<canvas id="ballField"></canvas>
+		<div id="ballsExpanded"></div>
+    <div id="totalScore"></div>
+    <div id="levelScore"></div>
+    <div id="levelNumber"></div>
 		<div id="notifierBox">
-			<div id="notifierTitle">You win! Total 100 points</div>
-			<div id="notifierButton">Play Level 2</div>
+			<div id="notifierTitle">Cause a Chain Reaction</div>
+			<div id="notifierButton">Start Game</div>
 		</div>
 	</div>
- 
+ <div class="supported">See the <a href="http://yvoschaap.com/chainrxn/">simple version</a>? | Supported by <a href="http://www.yvoschaap.com/">Yvo Schaap</a> and <a href="http://www.directlyrics.com/">lyrics</a>.</div>
 
 </body></html>
