--- a/pages/index.html
+++ b/pages/index.html
@@ -13,6 +13,8 @@
 		<p><a href="pingtext.html">Ping Text (In Testing)</a></p>
 		<p><a href="cheat-sheets.html">Code Cheat Sheets</a></p>
 		<p><a href="find-games.html">Games</a></p>
+		<p><a href="basic-calculator-calculator.net.html">Basic Calculator</a></p>
+		<p><a href="scientific-calculator-calculator.net.html">Scientific Calculator</a></p>
 		<p></p>
 		<p></p>
 		<p></p>
