Added a page for links to all of the calculators. added a link to index.html for that.

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,8 +13,7 @@
 		<p><a href="pingtext.html">Ping Text (In Testing)</a></p>
 		<p><a href="cheat-sheets.html">Code Cheat Sheets</a></p>
 		<p><a href="find-games.html">Games</a></p>
-		<p><a href="basic-calculator-calculator.net.html">Basic Calculator</a></p>
-		<p><a href="scientific-calculator-calculator.net.html">Scientific Calculator</a></p>
+		<p><a href="find-calculators.html">Calculators</a></p>
 		<p></p>
 		<p></p>
 		<p></p>
