--- a/pages/index.html
+++ b/pages/index.html
@@ -17,7 +17,7 @@
 		<p></p>
 		<p></p>
 		<p></p>
-		<img src="pics/THEEnterprisesLogo.png">
+		<img src="pics/THEEnterprisesLogo0001.png">
 		<p>&copy;2016 THE Enterprises. All rights reserved.</p>
 	</body>
 </html>
