fixed .png with .jpg on the logo file extention labled on index.html.

--- a/pages/index.html
+++ b/pages/index.html
@@ -17,7 +17,7 @@
 		<p></p>
 		<p></p>
 		<p></p>
-		<img src="pics/the-logo.png">
+		<img src="pics/the-logo.jpg">
 		<p>&copy;2016 THE Enterprises. All rights reserved.</p>
 	</body>
 </html>
