Created worsearch.html and added table

--- a/pages/index.html
+++ b/pages/index.html
@@ -14,6 +14,7 @@
 		<p><a href="cheat-sheets.html">Code Cheat Sheets</a></p>
 		<p><a href="find-games.html">Games</a></p>
 		<p><a href="find-calculators.html">Calculators</a></p>
+		<p><a href="wordsearch.html">Word Search</a></p>
 		<p></p>
 		<p></p>
 		<p></p>
