Created CSS and JS files, generated random letters and layed them out in a grid.

--- a/pages/wordsearch.html
+++ b/pages/wordsearch.html
@@ -1,41 +1,10 @@
 <html>
     <body>
-        <table style="border:1px solid #000;">
-            <tr>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-            </tr>
-            <tr>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-            </tr>
-            <tr>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-            </tr>
-            <tr>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-            </tr>
-            <tr>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-                <td>x</td>
-            </tr>
-        </table>
+        <head>
+            <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+            <link rel="stylesheet" type="text/css" href="wordsearch.css">
+            <script type="text/javascript" src="wordsearch.js"></script>
+        </head>
+        <table id="wordgrid"></table>
     </body>
 </html>
