--- a/pages/wordsearch.html
+++ b/pages/wordsearch.html
@@ -5,6 +5,6 @@
             <link rel="stylesheet" type="text/css" href="wordsearch.css">
             <script type="text/javascript" src="wordsearch.js"></script>
         </head>
-        <table id="wordgrid"></table>
+        <table align="center" id="wordgrid"></table>
     </body>
 </html>
